# ApprovalTests.Cpp

./: .autotools  .cproject  .gitignore  .project  AUTHORS  ApprovalsTest.testVerify.approved.txt  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  make_run_tests.sh  reconf.sh
cfg/: config.h  config.h.in
dependencies/gtest-1.7.0/: configure  configure.ac
dependencies/gtest-1.7.0/msvc/: gtest-md.vcproj
include/: ApprovalTextWriter.h  Approvals.h  DiffMergeReporter.h  FileApprover.h  FileUtils.h  FirstWorkingReporter.h  GenericDiffReporter.h  GoogleTestNamer.h  IApprovable.h  IApprovalReporter.h  IApprovalWriter.h  IEnvironmentAwareReporter.h  IFileUtils.h  INamer.h  Kdiff3Reporter.h
msvc/: ApprovalTests.Cpp.sln  ApprovalTests.Cpp.vcxproj  ApprovalTests.Cpp.vcxproj.filters  README.txt  UnitTests.vcxproj  UnitTests.vcxproj.filters
msvc/vs2005/: ApprovalTests.Cpp.sln  ApprovalTests.Cpp.vcproj  UnitTests.vcproj
src/: main.cpp
src/approvers/: Approvals.cpp  FileApprover.cpp
src/namer/: GoogleTestNamer.cpp
src/reporters/: DiffMergeReporter.cpp  FirstWorkingReporter.cpp  GenericDiffReporter.cpp  Kdiff3Reporter.cpp
src/utils/: FileUtils.cpp
src/writer/: ApprovalTextWriter.cpp
tests/: ApprovalTextWriterTest.h  ApprovalsTest.h  FileApproverTest.h  GenericDiffReporterTest.h  GoogleTestNamerTest.h  Makefile.am  Makefile.am~  Makefile.in  checklib.cpp  run_all_tests.cpp
xcode/: project.pbxproj  targetdep.sh
xcode/project.xcworkspace/: contents.xcworkspacedata
xcode/project.xcworkspace/xcshareddata/: project.xccheckout  (+1 more)
